CloudCTF-main/k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cloudctf
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
